--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.6.1",
-    "nuxt": "^3.3.1"
+    "nuxt": "^3.3.1",
+    "nuxt-icon": "^0.3.3"
   }
 }
