--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint-plugin-vue": "^9.10.0",
     "nuxt": "^3.3.1",
     "nuxt-icon": "^0.3.3"
   }
