--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@typescript-eslint/parser": "^5.56.0",
     "eslint-plugin-vue": "^9.10.0",
     "nuxt": "^3.3.1",
+    "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.3"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.0.16"
   }
 }
