--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/tailwindcss": "^6.6.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@vite-pwa/nuxt": "^0.0.7",
     "eslint-plugin-vue": "^9.10.0",
     "nuxt": "^3.3.1",
     "nuxt-headlessui": "^1.1.1",
