--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.16"
+    "@heroicons/vue": "^2.0.16",
+    "@nuxt/content": "^2.8.5",
+    "@nuxt/image": "1.0.0-rc.2"
   }
 }
