--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.16",
     "@nuxt/content": "^2.8.5",
-    "@nuxt/image": "1.0.0-rc.2"
+    "@nuxt/image": "1.0.0-rc.2",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
