--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -8,20 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^3.0.0",
-    "@nuxtjs/tailwindcss": "^6.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@vite-pwa/nuxt": "^0.0.7",
-    "eslint-plugin-vue": "^9.10.0",
+    "@nuxt/devtools": "latest",
     "nuxt": "^3.7.4",
-    "nuxt-headlessui": "^1.1.1",
-    "nuxt-icon": "^0.3.3"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.16",
     "@nuxt/content": "^2.8.5",
-    "@nuxt/image": "1.0.0-rc.2",
-    "@tailwindcss/typography": "^0.5.10"
+    "@nuxt/image": "1.0.0-rc.3",
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "nuxt-headlessui": "^1.1.4",
+    "nuxt-icon": "^0.5.0"
   }
 }
