--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/typography": "^0.5.10",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "nuxt-og-image": "^2.1.2"
   }
 }
