--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/nuxt": "^10.5.0",
     "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.5.0",
     "nuxt-og-image": "^2.1.2"
