--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.0",
     "nuxt": "^3.8.0",
-    "vue": "^3.3.4",
+    "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.5",
-    "@nuxt/image": "1.0.0-rc.3",
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/image": "1.0.0",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxtjs/tailwindcss": "^6.8.1",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.5.0",
-    "nuxt-og-image": "^2.1.2"
+    "nuxt-icon": "^0.6.1",
+    "nuxt-og-image": "^2.2.0"
   }
 }
