--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wangyland",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -9,23 +9,23 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "@nuxt/devtools": "^1.0.5",
-    "@nuxthq/studio": "^1.0.5",
-    "nuxt": "^3.8.2",
-    "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
-  },
   "dependencies": {
     "@nuxt/content": "^2.9.0",
     "@nuxt/image": "1.1.0",
-    "@nuxtjs/google-fonts": "^3.1.0",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0"
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "^1.0.5",
+    "@nuxthq/studio": "^1.0.5",
+    "@nuxtjs/google-fonts": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@vueuse/core": "^10.7.0",
-    "@vueuse/nuxt": "^10.7.0",
+    "nuxt": "^3.8.2",
     "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.6.7",
-    "nuxt-og-image": "^2.2.4"
+    "nuxt-og-image": "^2.2.4",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   }
 }
