--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@vueuse/nuxt": "^10.7.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.0.5",
+    "@nuxt/devtools": "^1.0.6",
     "@nuxthq/studio": "^1.0.5",
-    "@nuxtjs/google-fonts": "^3.1.1",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@tailwindcss/typography": "^0.5.10",
     "nuxt": "^3.8.2",
     "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.6.7",
-    "nuxt-og-image": "^2.2.4",
+    "nuxt-og-image": "3.0.0-rc.10",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   }
