--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@nuxt/content": "^2.10.0",
@@ -16,6 +18,7 @@
     "@vueuse/nuxt": "^10.7.1"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.1",
     "@nuxt/devtools": "^1.0.6",
     "@nuxthq/studio": "^1.0.6",
     "@nuxtjs/google-fonts": "^3.1.3",
@@ -24,8 +27,8 @@
     "nuxt": "^3.9.0",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
-    "nuxt-og-image": "3.0.0-rc.14",
-    "vue": "^3.4.3",
+    "nuxt-og-image": "3.0.0-rc.21",
+    "vue": "^3.4.5",
     "vue-router": "^4.2.5"
   }
 }
