--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.11.0",
-    "@nuxt/image": "1.3.0",
-    "@vueuse/core": "^10.7.2",
-    "@vueuse/nuxt": "^10.7.2"
+    "@nuxt/image": "1.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@nuxt/devtools": "^1.0.8",
     "@nuxthq/studio": "^1.0.10",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/sitemap": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@tailwindcss/typography": "^0.5.10",
-    "nuxt": "^3.9.3",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/nuxt": "^10.7.2",
+    "nuxt": "^3.10.0",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
-    "nuxt-og-image": "3.0.0-rc.30",
+    "nuxt-og-image": "3.0.0-rc.37",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   }
