--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@nuxt/content": "^2.12.1",
-    "@nuxt/image": "1.5.0"
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/image": "1.8.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.15.0",
-    "@nuxt/devtools": "^1.2.0",
-    "@nuxthq/studio": "^1.0.13",
+    "@antfu/eslint-config": "^3.12.0",
+    "@nuxt/devtools": "^1.6.4",
+    "@nuxt/icon": "^1.10.1",
+    "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/sitemap": "^5.1.4",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@tailwindcss/typography": "^0.5.12",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "nuxt": "^3.11.2",
+    "@nuxtjs/sitemap": "^7.0.0",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "^12.0.0",
+    "nuxt": "^3.14.1592",
     "nuxt-headlessui": "^1.2.0",
-    "nuxt-icon": "^0.6.10",
-    "nuxt-og-image": "3.0.0-rc.52",
-    "vue": "^3.4.23",
-    "vue-router": "^4.3.2"
+    "nuxt-og-image": "4.0.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
