--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
+    "@iconify-json/iconamoon": "^1.2.1",
+    "@iconify-json/pajamas": "^1.2.4",
+    "@iconify-json/ph": "^1.2.1",
     "@nuxt/devtools": "^1.6.4",
     "@nuxt/icon": "^1.10.1",
     "@nuxthq/studio": "^2.2.1",
