--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "@nuxt/image": "1.9.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.12.2",
+    "@antfu/eslint-config": "^3.14.0",
     "@iconify-json/iconamoon": "^1.2.2",
     "@iconify-json/pajamas": "^1.2.4",
     "@iconify-json/ph": "^1.2.2",
-    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/devtools": "^2.0.0-beta.2",
     "@nuxt/icon": "^1.10.3",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/sitemap": "^7.0.1",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@nuxtjs/sitemap": "^7.0.2",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@vueuse/core": "^12.3.0",
-    "@vueuse/nuxt": "^12.3.0",
-    "nuxt": "^3.15.1",
+    "@vueuse/core": "^12.4.0",
+    "@vueuse/nuxt": "^12.4.0",
+    "nuxt": "^3.15.2",
     "nuxt-headlessui": "^1.2.0",
-    "nuxt-og-image": "4.0.2",
+    "nuxt-og-image": "4.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
