--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
     "@iconify-json/iconamoon": "^1.2.2",
-    "@iconify-json/pajamas": "^1.2.4",
+    "@iconify-json/pajamas": "^1.2.5",
     "@iconify-json/ph": "^1.2.2",
-    "@nuxt/devtools": "^2.0.0-beta.4",
+    "@nuxt/devtools": "^2.0.0",
     "@nuxt/icon": "^1.10.3",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -31,7 +31,7 @@
     "@vueuse/nuxt": "^12.5.0",
     "nuxt": "^3.15.4",
     "nuxt-headlessui": "^1.2.0",
-    "nuxt-og-image": "4.0.3",
+    "nuxt-og-image": "4.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
