--- a/package.json
+++ b/package.json
@@ -13,26 +13,30 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
-    "@nuxt/image": "1.9.0"
+    "@nuxt/image": "1.10.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.16.0",
+    "@antfu/eslint-config": "^4.12.0",
     "@iconify-json/iconamoon": "^1.2.2",
-    "@iconify-json/pajamas": "^1.2.5",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/octicon": "^1.2.5",
+    "@iconify-json/pajamas": "^1.2.6",
     "@iconify-json/ph": "^1.2.2",
-    "@nuxt/devtools": "^2.3.0",
-    "@nuxt/icon": "^1.11.0",
+    "@iconify-json/ri": "^1.2.5",
+    "@iconify-json/uim": "^1.2.3",
+    "@nuxt/devtools": "^2.4.0",
+    "@nuxt/icon": "^1.12.0",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/sitemap": "^7.2.9",
-    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@nuxtjs/sitemap": "^7.2.10",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@vueuse/core": "^12.8.2",
-    "@vueuse/nuxt": "^12.8.2",
-    "nuxt": "^3.16.0",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
+    "nuxt": "^3.17.1",
     "nuxt-headlessui": "^1.2.0",
-    "nuxt-og-image": "4.1.2",
+    "nuxt-og-image": "5.1.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.1"
   }
 }
